# findarc-cli

./: pyproject.toml
.github/: PYPI_PUBLISHING.md  TESTPYPI_PUBLISHING.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
finda/: __init__.py  client.py  config.py  exceptions.py  models.py
finda/cli/: __init__.py  main.py
findarc/: __init__.py  client.py  config.py  exceptions.py  models.py
findarc/cli/: main.py
tests/: test_cli.py
