[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "findarc"
version = "0.1.0"
description = "Python SDK and CLI for the findarc agent marketplace"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
finda = "findarc.cli.main:main"
findarc = "findarc.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["findarc"]
